@@ -90,6 +90,7 @@ public class ServiceFactory extends AbstractInit {
 
 
     Set<Registry> registries = flowerFactory.getRegistry();
+    logger.info("注册中心 {} : {}", serviceName, registries.size());
     if (registries.isEmpty()) {
       return;
     }
@@ -99,7 +100,7 @@ public class ServiceFactory extends AbstractInit {
 
     ServiceInfo serviceInfo = new ServiceInfo();
     serviceInfo.setApplication(flowerConfig.getName());
-    serviceInfo.addAddress(new URL("flower", flowerConfig.getHost(), flowerConfig.getPort()));
+    serviceInfo.addAddress(flowerConfig.toURL());
     serviceInfo.setCreateTime(new Date());
     serviceInfo.setClassName(serviceClassName);
     serviceInfo.setServiceMeta(serviceMeta);
@@ -204,6 +205,7 @@ public class ServiceFactory extends AbstractInit {
       List<ServiceInfo> serviceInfos = registry.getProvider(null);
       if (serviceInfos != null) {
         for (ServiceInfo serviceInfo : serviceInfos) {
+          logger.info("注册中心获取连接: {}" , serviceInfo);
           if (serviceInfo.getServiceName().equals(serviceConfig.getServiceName())) {
             // add service address
             serviceConfig.setAddresses(serviceInfo.getAddresses());
